tests/baselines/reference/parserStrictMode15-negative.errors.txt
==== tests/cases/compiler/parserStrictMode15-negative.ts (2 errors) ====
    "use strict";
    delete a[b];
           ~
!!! parserStrictMode15-negative.ts(2,8): error TS2095: Cannot find name 'a'.
             ~
!!! parserStrictMode15-negative.ts(2,10): error TS2095: Cannot find name 'b'.